增加公共服务common service

--- a/zuul_application.yml
+++ b/zuul_application.yml
@@ -23,6 +23,8 @@ zuul:
   routes:
     product.serviceId: product-service
     product.path: /product/**
+    product.serviceId: common-service
+    product.path: /product/**
 
 ---
 server:
@@ -43,4 +45,6 @@ zuul:
   ignored-services: "*"
   routes:
     product.serviceId: product-service
+    product.path: /product/**
+    product.serviceId: common-service
     product.path: /product/**
